syntax = "proto3";

package gokeepas;

option go_package = "github.com/hrapovd1/gokeepas/internal/proto";

message AuthRequest {
	string login = 1; // client login in tls connection
	string password = 2; // client password in tls connection
}
message AuthResponse {
	bytes symmKey = 1; // client's symmetric key for encrypt secrets
	string authToken = 2; // client's authentication token
	string error = 3;
}

enum Type {
	TEXT = 0;
	BINARY = 1;
	LOGIN = 2;
	CART = 3;
}

message BinRequest {
	string data = 1; // encrypted data with symm key
	string key = 2; // key of value
	Type type = 3; // type of value
	string newKey = 4; // new key value
}
message BinResponse {
	string error = 1;
}
message GetResponse {
	bytes data = 1; // encrypted data with symm key
	string key = 2; // key of value
	Type type = 3; // type of value
}
message ListResponse {
	string keys = 1; // list keys separated new line
}

service KeepPas {
	rpc SignUp (AuthRequest) returns (AuthResponse);
	rpc LogIn (AuthRequest) returns (AuthResponse);
	rpc Add (BinRequest) returns (BinResponse); // add encrypted data value for key
	rpc Get (BinRequest) returns (GetResponse); // get encrypted data value for key
	rpc GetKey (BinRequest) returns (AuthResponse);
	rpc List (BinRequest) returns (ListResponse);
	rpc Remove (BinRequest) returns (BinResponse);
	rpc Rename (BinRequest) returns (BinResponse);
	rpc Update (BinRequest) returns (BinResponse);
	rpc Copy (BinRequest) returns (BinResponse);
}